--- a/frontend/packages/editor/src/blocknote/core/extensions/Blocks/nodes/Block.module.css
+++ b/frontend/packages/editor/src/blocknote/core/extensions/Blocks/nodes/Block.module.css
@@ -520,11 +520,23 @@ NESTED BLOCKS
   line-height: 1.5;
 }
 
-.isEmpty.hasAnchor
-  .blockContent[data-content-type='image']
-  .inlineContent:before {
+.isEmpty.hasAnchor 
+  .blockContent[data-content-type='image'] 
+  .inlineContent::before {
   content: 'Image caption';
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
+
+.blockContent[data-content-type='image'] 
+  .inlineContent {
+  font-size: 0.9em;
+  opacity: 0.6;
+  min-width: 30%;
+  display: block;
+  text-align: center;
+  }
 
 [data-content-type='heading'] {
   font-family:
